// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditableListInput when \`type\` is "text" renders correctly 1`] = `
<FormField
  name="Editable-List-Input"
>
  <FormGroup
    className="inline-input-btn"
    unstackable={true}
    widths={2}
  >
    <FormInput
      as={[Function]}
      control={[Function]}
      error={false}
      fluid={true}
      name="1"
      placeholder="Testando:"
      type="text"
      width={13}
    />
    <FormButton
      as={[Function]}
      color="teal"
      content="Add"
      control={[Function]}
      onClick={[Function]}
      width={3}
    />
  </FormGroup>
  <ListField
    onRemove={[Function]}
    renderValue={[Function]}
    style={
      Object {
        "marginBottom": "14px",
        "maxHeight": "100px",
        "overflowY": "auto",
      }
    }
    values={
      Array [
        "testando1",
        "testando2",
      ]
    }
  />
</FormField>
`;

exports[`EditableListInput when \`type\` is "url" renders correctly 1`] = `
<FormField
  name="Editable-List-Input"
>
  <FormGroup
    className="inline-input-btn"
    unstackable={true}
    widths={2}
  >
    <FormInput
      as={[Function]}
      control={[Function]}
      error={false}
      fluid={true}
      name="1"
      placeholder="Testando:"
      type="url"
      width={13}
    />
    <FormButton
      as={[Function]}
      color="teal"
      content="Add"
      control={[Function]}
      onClick={[Function]}
      width={3}
    />
  </FormGroup>
  <ListField
    onRemove={[Function]}
    renderValue={[Function]}
    style={
      Object {
        "marginBottom": "14px",
        "maxHeight": "100px",
        "overflowY": "auto",
      }
    }
    values={
      Array [
        "http://google.com",
        "http://youtube.com",
      ]
    }
  />
</FormField>
`;
